--- a/index.html
+++ b/index.html
@@ -40,8 +40,9 @@
                     <img src=" images/banner.png" alt="">
                 </div>
             </div>
+        </header>
     </div>
-    </header>
+   
     <!-- header section ends here -->
     <!-- main section starts here -->
     <main>
@@ -188,8 +189,8 @@
         <!-- card design ends here............ -->
         <section class="about-kick">
             <div class="about-kick-leftside">
-                <h1 class="about-kick-title">About <span style="color: rgba(214, 31, 31, 0.863);">Kick</span></h1>
-                <p class="about-kick-para">
+                <h1>About <span style="color: rgba(214, 31, 31, 0.863);">Kick</span></h1>
+                <p>
                     A kick is a skill in association football in which a player strikes the ball with their foot. ...
                     Kicking is one of the most difficult skills to acquire in football. This skill is also vitally
                     important, as kicking is the way in which passes are made and the primary means by which goals are
@@ -208,7 +209,7 @@
                   
                 </div>
             </div>
-            <div class="about-kick-rightside">
+            <div class="about-kick-image">
                 <img src="images/img-03.png" alt="">
             </div>
         </section>
