--- a/index.html
+++ b/index.html
@@ -15,7 +15,6 @@
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@700&display=swap" rel="stylesheet">
     <title>Football website</title>
 </head>
-
 <body>
     <div class="container">
         <header>
@@ -42,11 +41,10 @@
             </div>
         </header>
     </div>
-   
     <!-- header section ends here -->
+
     <!-- main section starts here -->
     <main>
-       
         <section class="player-part">
             <div class="players">
                 <div class="player-frame">
@@ -58,7 +56,6 @@
                         <p>Neymar, is a Brazilian professional footballer who plays as a forward for Ligue 1 club Paris.
                         </p>
                     </div>
-
                 </div>
                 <div class="player-frame">
                     <div class="player">
@@ -66,10 +63,10 @@
                     </div>
                     <div class="player-details">
                         <h2>Lionel Messi</h2>
-                        <p>Leo Messi is Argentine professional footballer who plays as a forward or an attacking midfielder and captains.
+                        <p>Leo Messi is Argentine professional footballer who plays as a forward or an attacking
+                            midfielder and captains.
                         </p>
                     </div>
-
                 </div>
                 <div class="player-frame">
                     <div class="player">
@@ -77,10 +74,10 @@
                     </div>
                     <div class="player-details">
                         <h2>Cristiano Ronaldo</h2>
-                        <p>Cristiano Ronaldo is a Portuguese professional footballer who plays as a forward for Serie A club Juventus and captain.
+                        <p>Cristiano Ronaldo is a Portuguese professional footballer who plays as a forward for Serie A
+                            club Juventus and captain.
                         </p>
                     </div>
-
                 </div>
                 <div class="player-frame">
                     <div class="player">
@@ -88,10 +85,10 @@
                     </div>
                     <div class="player-details">
                         <h2>Paulo Dybala</h2>
-                        <p>Paulo Dybala Argentine professional footballer who plays as a forward for Serie A club Juventus and the Argentina.
+                        <p>Paulo Dybala Argentine professional footballer who plays as a forward for Serie A club
+                            Juventus and the Argentina.
                         </p>
                     </div>
-
                 </div>
                 <div class="player-frame">
                     <div class="player">
@@ -99,10 +96,10 @@
                     </div>
                     <div class="player-details">
                         <h2>Mesut Ozil</h2>
-                        <p>Mesut Özil is a German professional footballer who plays as an attacking midfielder for Süper Lig club Fenerbahçe.
+                        <p>Mesut Özil is a German professional footballer who plays as an attacking midfielder for Süper
+                            Lig club Fenerbahçe.
                         </p>
                     </div>
-
                 </div>
                 <div class="player-frame">
                     <div class="player">
@@ -113,7 +110,6 @@
                         <p>Mauro Icardi (born 19 February 1993) is an Argentine professional footballer.
                         </p>
                     </div>
-
                 </div>
                 <div class="player-frame">
                     <div class="player">
@@ -121,21 +117,21 @@
                     </div>
                     <div class="player-details">
                         <h2>Di María</h2>
-                        <p>Di María is Argentine professional footballer who plays for Ligue 1 club Paris Saint-Germain and the Argentina.
+                        <p>Di María is Argentine professional footballer who plays for Ligue 1 club Paris Saint-Germain
+                            and the Argentina.
                         </p>
                     </div>
-
-                </div>
+               </div>
                 <div class="player-frame">
                     <div class="player">
                         <img src="images/players/player-8.png" alt="">
                     </div>
                     <div class="player-details">
                         <h2>Kylian Mbappé</h2>
-                        <p>Kylian Mbappé is a French professional footballer who plays as a forward for Ligue 1 club Paris Saint-Germain.
+                        <p>Kylian Mbappé is a French professional footballer who plays as a forward for Ligue 1 club
+                            Paris Saint-Germain.
                         </p>
                     </div>
-
                 </div>
                 <div class="player-frame">
                     <div class="player">
@@ -143,10 +139,10 @@
                     </div>
                     <div class="player-details">
                         <h2>Mohamed Salah</h2>
-                        <p>Mohamed Salah Hamed Mahrous Ghaly is an Egyptian professional footballer who plays as a forward for Premier League club Liverpool.
+                        <p>Mohamed Salah Hamed Mahrous Ghaly is an Egyptian professional footballer who plays as a
+                            forward for Premier League club Liverpool.
                         </p>
                     </div>
-
                 </div>
                 <div class="player-frame">
                     <div class="player">
@@ -154,10 +150,10 @@
                     </div>
                     <div class="player-details">
                         <h2>Harry Edward</h2>
-                        <p>Harry Edward is English professional footballer who plays as a striker for Premier League club Tottenham Hotspur.
+                        <p>Harry Edward is English professional footballer who plays as a striker for Premier League
+                            club Tottenham Hotspur.
                         </p>
                     </div>
-
                 </div>
                 <div class="player-frame">
                     <div class="player">
@@ -165,10 +161,10 @@
                     </div>
                     <div class="player-details">
                         <h2>Kevin De Bruyne</h2>
-                        <p>Kevin De Bruyne Belgian professional footballer who plays as a midfielder for Premier League club Manchester City.
+                        <p>Kevin De Bruyne Belgian professional footballer who plays as a midfielder for Premier League
+                            club Manchester City.
                         </p>
                     </div>
-
                 </div>
                 <div class="player-frame">
                     <div class="player">
@@ -176,50 +172,36 @@
                     </div>
                     <div class="player-details">
                         <h2>Philippe Coutinho</h2>
-                        <p>Philippe Coutinho is Brazilian professional footballer who plays as an attacking midfielder for Spanish club Barcelona.
+                        <p>Philippe Coutinho is Brazilian professional footballer who plays as an attacking midfielder
+                            for Spanish club Barcelona.
                         </p>
                     </div>
-
                 </div>
-
             </div>
-
         </section>
 
         <!-- card design ends here............ -->
         <section class="about-kick">
             <div class="about-kick-leftside">
                 <h1>About <span style="color: rgba(214, 31, 31, 0.863);">Kick</span></h1>
-                <p>
-                    A kick is a skill in association football in which a player strikes the ball with their foot. ...
-                    Kicking is one of the most difficult skills to acquire in football. This skill is also vitally
+                <p> A kick is a skill in association football in which a player strikes the ball with their foot. ... Kicking is one of the most difficult skills to acquire in football. This skill is also vitally
                     important, as kicking is the way in which passes are made and the primary means by which goals are
                     scored.</p>
-
                 <div class="row1">
                     <div class="col1">
                         <h2>training capacity</h2>
                         <p>On average, professional soccer teams practice for 4 – 6 hours a day
                             for 5 days a week. </p>
-
                         <h2>team member</h2>
                         <p>A football team is typically made up of 11 members: 1 goalkeeper and
                             10 outfield .</p>
                     </div>
-                  
                 </div>
             </div>
             <div class="about-kick-image">
                 <img src="images/img-03.png" alt="">
             </div>
         </section>
-
-
-
-
-
-
-
 
         <!-- ..............................
             match galary sectionstats here
@@ -251,5 +233,4 @@
         </div>
     </footer>
 </body>
-
 </html>
