--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@700&display=swap" rel="stylesheet">
     <title>Football website</title>
 </head>
+
 <body>
     <div class="container">
         <header>
@@ -45,6 +46,7 @@
 
     <!-- main section starts here -->
     <main>
+        <!-- players section starts here -->
         <section class="player-part">
             <div class="players">
                 <div class="player-frame">
@@ -121,7 +123,7 @@
                             and the Argentina.
                         </p>
                     </div>
-               </div>
+                </div>
                 <div class="player-frame">
                     <div class="player">
                         <img src="images/players/player-8.png" alt="">
@@ -179,12 +181,17 @@
                 </div>
             </div>
         </section>
+        <!-- ..................
+       players  section ends here-->
 
-        <!-- card design ends here............ -->
-        <section class="about-kick">
-            <div class="about-kick-leftside">
+        <!-- ..................
+        about section ends here
+        ....................... --->
+        <section class="about-section">
+            <div class="about-section-leftside">
                 <h1>About <span style="color: rgba(214, 31, 31, 0.863);">Kick</span></h1>
-                <p> A kick is a skill in association football in which a player strikes the ball with their foot. ... Kicking is one of the most difficult skills to acquire in football. This skill is also vitally
+                <p> A kick is a skill in association football in which a player strikes the ball with their foot. ...
+                    Kicking is one of the most difficult skills to acquire in football. This skill is also vitally
                     important, as kicking is the way in which passes are made and the primary means by which goals are
                     scored.</p>
                 <div class="row1">
@@ -198,10 +205,13 @@
                     </div>
                 </div>
             </div>
-            <div class="about-kick-image">
+            <div class="about-section-image">
                 <img src="images/img-03.png" alt="">
             </div>
         </section>
+        <!-- ..................
+        about section ends here
+        ....................... -->
 
         <!-- ..............................
             match galary sectionstats here
@@ -233,4 +243,5 @@
         </div>
     </footer>
 </body>
+
 </html>
